Reange some elements of index.html

--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,9 @@ html, body {
     padding-left: 20px;
     padding-right: 20px;
 }
+
+@media (max-width: 991px) {
+    #show-btn {
+        margin-top: 8px;
+    }
+}
