--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,14 @@ html, body {
     margin-top: 16px;
 }
 
-#progressbar {
+.progress-bar {
     background: rgb(91, 192, 222);
+    color: whitesmoke;
+}
+
+.progress-bar-success {
+    background:  rgb(92, 184, 92);
+    color: whitesmoke;
 }
 
 @media only screen and (max-width:768px){
